<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageTitle"
                android:id="@+id/imageTitle"
                android:layout_gravity="left|center_vertical"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDate"
                android:id="@+id/imageDate"
                android:layout_gravity="left|center_vertical"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageDisplay"
                android:layout_gravity="left|center_vertical"
                android:src="@drawable/test"
                android:adjustViewBounds="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDescription"
                android:id="@+id/imageDescription"
                android:layout_gravity="left|center_vertical"/>
    </LinearLayout>
</ScrollView>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:background="#FF8D8D8D"
            android:layout_weight="0">
        <Button android:text="@string/refresh_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onRefresh"></Button>
        <Button android:text="@string/set_wallpaper_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onSetWallpaper"></Button>
    </LinearLayout>
</LinearLayout>